Add 'iproute2' package dependency
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-route/debian/control
+++ b/deb/openmediavault-route/debian/control
@@ -9,7 +9,7 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault-route
 Architecture: all
-Depends: openmediavault (>= 4.0)
+Depends: openmediavault (>= 4.0), iproute2
 Priority: optional
 Description: OpenMediaVault IP routing table plugin
  Adds the ability to manipulate the IP routing table via WebGUI.
