--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -2,7 +2,7 @@ Source: openmediavault
 Section: admin
 Priority: optional
 Maintainer: Volker Theile <volker.theile@openmediavault.org>
-Build-Depends: debhelper (>> 9), dh-systemd, gettext, doxygen (>= 1.8.9.1)
+Build-Depends: debhelper (>> 9), dh-systemd, gettext, doxygen, sassc
 Standards-Version: 3.9.6
 Homepage: http://www.openmediavault.org
 
