--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -46,9 +46,9 @@ Vagrant.configure("2") do |config|
 	config.vm.provider :libvirt do |prov|
 		prov.memory = "2048"
 		# Add some disks.
-		prov.storage :file, :size => "1G", :bus => "scsi"
-		prov.storage :file, :size => "1G", :bus => "scsi"
-		prov.storage :file, :size => "1G", :bus => "scsi"
+		for i in 0..2 do
+			prov.storage :file, :size => "1G", :bus => "scsi"
+		end
 	end
 	config.vm.synced_folder "../deb", "/home/vagrant/openmediavault",
 		:nfs => true,
