--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -10,8 +10,8 @@ Package: openmediavault
 Architecture: all
 Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  php-cgi, php-cli, php-mbstring, php-pam, sudo, ethtool, python3-dialog,
- acl, ifenslave, resolvconf, iproute2, xfsprogs, jfsutils, ntfs-3g, hdparm,
- sdparm, ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, python3-dbus,
+ acl, iproute2, xfsprogs, jfsutils, ntfs-3g, hdparm,
+ sdparm, mdadm, postfix, libsasl2-modules, bsd-mailx, python3-dbus,
  cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
  uuid, tzdata, nfs-kernel-server, proftpd-basic, lsb-release,
  wget, util-linux, samba, samba-common-bin, rsync, apt-utils,
@@ -19,7 +19,7 @@ Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  gdisk, rrdtool, collectd, cron, anacron, cron-apt, quota, php-xml,
  quotatool, whiptail, lvm2, watchdog, ca-certificates, perl, libjson-perl,
  liblocale-po-perl, proftpd-mod-vroot, libjavascript-minifier-xs-perl,
- coreutils, xmlstarlet, mount, parted, bash, diffutils, lsof,
+ coreutils, xmlstarlet, mount, parted, bash, diffutils, lsof, isc-dhcp-client,
  socat, rrdcached, locales, nginx, bash-completion, python3,
  python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-progs,
  samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq, chrony,
