--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -26,7 +26,8 @@ Vagrant.configure("2") do |config|
 	config.vm.box = "debian/stretch64"
 	config.vm.define hostname
 	config.vm.provision :shell, :path => "install.sh"
-	config.vm.network "private_network", ip: "192.172.16.24"
+	config.vm.network "private_network", ip: "192.172.16.24", auto_config: false
+	config.vm.network "private_network", ip: "192.172.16.25"
 	config.vm.hostname = hostname
 	config.vm.provider :virtualbox do |prov|
 		prov.name = hostname
