Add more python unit tests.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/usr/share/openmediavault/unittests/python/Makefile
+++ b/deb/openmediavault/usr/share/openmediavault/unittests/python/Makefile
@@ -27,4 +27,8 @@ test:
 		echo; \
 	done
 
-.PHONY: test
+setup:
+	echo "Installing required packages ..."
+	sudo apt-get install python3-mock
+
+.PHONY: test setup
