--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -23,9 +23,8 @@ Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  socat, rrdcached, locales, nginx, bash-completion, python3,
  python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-progs,
  samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq, chrony,
- python3-netifaces, udev, apt-transport-https, python3-lxml,
- salt-minion (>= 2018.3.3), php-yaml, python-click, python3-click,
- ${misc:Depends}
+ python3-netifaces, udev, apt-transport-https, python3-lxml, salt-minion,
+ php-yaml, python-click, python3-click, ${misc:Depends}
 Description: openmediavault - The open network attached storage solution
  openmediavault is a small and simple to use network attached storage system
  with a smart WebGUI.
